--- a/report/report.tex
+++ b/report/report.tex
@@ -455,7 +455,7 @@ Email: lzhiheng@eng.ucsd.edu}
 \section{Introduction}
 \subsection{Background}
 A fairly large amount of researches have been done in the area of continuous query processing and complex event analysis since early 2000. The \emph{STREAM} prototype Data Stream Management System (DSMS)
-designed by the Stanford InfoLab~\cite{ABB+03} is marked as one of the pioneer projects in this area. The \emph{CQL} language, a continuous query language designed along with \emph{STREAM} DSMS defines an abstract semantics for the \emph{sliding window}, which is a key component in streaming analysis, and thus became an important reference when researchers design new query languages for streaming based systems. Base on these work, several Complex Event Processing (CEP) engines and Event Processing Lanaguage (EPL) have been proposed to ease the development of real-time streaming applications. Esper~\cite{Paul08} is one of the successful examples that enables a SQL-standard, low-latency and real-time streaming CEP engine. However, one problem that these systems suffer is the scalability and reliability since most of them perform in-memory computation. The only way to scale systems for massive data sets is adding more physical memories. On the other hand, the single-machine architecture becomes another bottleneck when streaming rate increases. With the increasing needs in application areas such as finanical analysis, network monitoring, online bidding and algorithmic trading, a distributed real-time computation system designed with horizontal scalabilty and fault-tolerant model that produce high throughput and low latency results is often desired. Apache Storm~\cite{Storm}, a distributed real-time computation system designed by Nathan Marz, has been adopted by several big companies like Twitter, Groupon, and RocketFuel since its first release around early 2009. It provides a fault-tolerant, scalable and at-most-once semantic model according to its official website. Apache Storm introduced Trident, a high level abstraction over Storm, in its 0.8.0 version released on 08/02/2012.~\cite{Trident} The advent of Trident made the distributed real-time computation even simpler since it comes with a Domain Specific Language (DSL) abstraction that allows programmers focus on the data operations only during the development. However, there is no \emph{sliding window} primitives existed in Trident, and a higher level abstraction that provides a SQL-standard language for streaming analysis is still missing.
+designed by the Stanford InfoLab~\cite{ABB+03} is marked as one of the pioneer projects in this area. The \emph{CQL} language, a continuous query language designed along with \emph{STREAM} DSMS defines an abstract semantics for the \emph{sliding window}, which is a key component in streaming analysis, and thus became an important reference when researchers design new query languages for streaming based systems. Base on these work, several Complex Event Processing (CEP) engines and Event Processing Language (EPL) have been proposed to ease the development of real-time streaming applications. Esper~\cite{Paul08} is one of the successful examples that enables a SQL-standard, low-latency and real-time streaming CEP engine. However, one problem that these systems suffer is the scalability and reliability since most of them perform in-memory computation. The only way to scale systems for massive data sets is adding more physical memories. On the other hand, the single-machine architecture becomes another bottleneck when streaming rate increases. With the increasing needs in application areas such as financial analysis, network monitoring, online bidding and algorithmic trading, a distributed real-time computation system designed with horizontal scalability and fault-tolerant model that produce high throughput and low latency results is often desired. Apache Storm~\cite{Storm}, a distributed real-time computation system designed by Nathan Marz, has been adopted by several big companies like Twitter, Groupon, and RocketFuel since its first release around early 2009. It provides a fault-tolerant, scalable and at-most-once semantic model according to its official website. Apache Storm introduced Trident, a high level abstraction over Storm, in its 0.8.0 version released on 08/02/2012.~\cite{Trident} The advent of Trident made the distributed real-time computation even simpler since it comes with a Domain Specific Language (DSL) abstraction that allows programmers focus on the data operations only during the development. However, there is no \emph{sliding window} primitives existed in Trident, and a higher level abstraction that provides a SQL-standard language for streaming analysis is still missing.
 
 \subsection{Motivation}
 The motivation of our work is partially inspired from the \emph{Pig} project~\cite{ORS+08} done by the Yahoo! research, who proposed a novel language called \emph{Pig Latin} for performing map-reduce job. The \emph{Pig Latin} program will be translated into low-level physical plans that runs directly on \emph{Hadoop}, an open-source implementation of map-reduce framework.~\cite{hadoop} As claimed in the documentation that Storm can be viewed as a real-time version of map-reduce framework, our goal is to design and implement a system which acts as the similar role over Storm as \emph{Pig} did over \emph{Hadoop}. The system is named as \emph{Triton}, which is a translation engine that compiles a script written in \emph{Triton Query Language} (TQL) into native JAVA code (in form of a Trident program) that runs directly over Storm. \emph{TQL} is a SQL-standard continuous query language with syntax similar to \emph{CQL} and Esper.
@@ -510,7 +510,7 @@ Trident is built on top of Storm, aimed to provide a high-level abstraction for 
 A \emph{TQL} \emph{script} consists of a sequences of \emph{statments}, with each of them terminated by a semicolon. Each statement is either a \emph{stream registration} or a \emph{query definition}. Each stream must be registered into the system before being referenced in a query. Section~\ref{stream-reg} and ~\ref{query-def} cover the detail.\
 
 \subsection{Stream registration}\label{stream-reg}
-A stream registration begins with a \texttt{REGISTER STREAM} statement, followed by the stream name and the attribute definition list. Each attribute definition in the list contains the attribute name and the type. There are four kinds of type our system supports currently, integer, float, string and timestamps. The user also need to specify a source definiton indicates where the stream should read data from. The source definition can be a user-defined spout class such as \texttt{spout("BatchSpout")} or a disk file such as \texttt{file("input.data")}. Example~\ref{reg-exmp} shows a stream registration reading from file data.
+A stream registration begins with a \texttt{REGISTER STREAM} statement, followed by the stream name and the attribute definition list. Each attribute definition in the list contains the attribute name and the type. There are four kinds of type our system supports currently, integer, float, string and timestamps. The user also need to specify a source definition indicates where the stream should read data from. The source definition can be a user-defined spout class such as \texttt{spout("BatchSpout")} or a disk file such as \texttt{file("input.data")}. Example~\ref{reg-exmp} shows a stream registration reading from file data.
 
 \begin{example}\label{reg-exmp}
 \begin{verbatim}
@@ -553,7 +553,7 @@ As far as this paper is written, our system supports common aggregation function
 \section{System Design}\label{sys-design}
 \subsection{Design decisions}
 \subsubsection{System architecture}
-From a high level of view, the system should be designed in a modularized way, with each module has a clean interface exposed to communicate with each other. Modules should be relatively independent from each other so that it can be easily replaced by a different implementations as long as the interfaces remain the same. This leads to a flexible and extensible system architecture, where new module can be added and old module can be replace without too much code change. Another advantage is that several implementation of a same module could be compared so that the optimal one can be used in the system. This design also leads to a generic code generation phase, where we aimed to provide a generic interface that allows code generator in different programming languages such as Python or Ruby can be written. This design decision cater to the flavor of Storm since itself is also language independent platform. The core of Storm is written in Cloujre, but the exposed API can be written with different programming languages.
+From a high level of view, the system should be designed in a modularized way, with each module has a clean interface exposed to communicate with each other. Modules should be relatively independent from each other so that it can be easily replaced by a different implementations as long as the interfaces remain the same. This leads to a flexible and extensible system architecture, where new module can be added and old module can be replace without too much code change. Another advantage is that several implementation of a same module could be compared so that the optimal one can be used in the system. This design also leads to a generic code generation phase, where we aimed to provide a generic interface that allows code generator in different programming languages such as Python or Ruby can be written. This design decision cater to the flavor of Storm since itself is also language independent platform. The core of Storm is written in Cloujre, but the exposed APIs can be written with different programming languages.
 
 \subsubsection{Compilable and readable code generation}
 Regarding to the code generation, the system should produce compilable JAVA code that contain equivalent semantics to the high level \emph{TQL} scripts, and can be run directly on the Storm topology. This implies several implementation challenges such as variable name allocation, import package management, and code organization. In addition, the generated code should be readable. This requirement can be view from two aspects. First it indicates that the code is pretty printed with proper indents between each logic blocks. In this case, we designed an internal representation of a JAVA program, which is a tree data structure, and a language printer which can print the program in a formatted way. Readable code also implies the logic of the code should be easy to understand. To achieve this, our system will translate the query script into Trident program, and delegate the translation of Storm topology to the platform itself. As mentioned above, the fluent interface ensures the program is clean and readable. However, there are several drawbacks of this design. First, the efficiency of the generated Storm topology may be affected due to the two-stage translation, though Trident engine will perform several optimizations during the process of topology generation. Second, this design leads to a high level implementation of the sliding window, which again may have a negative impact on the performance. Intuitively, it will be faster if this primitive is embedded in the Storm core system.
@@ -659,7 +659,7 @@ For join detection, a linear scan was done on each logic unit to check if it is 
 
 \subsection{Translation and Code Generation}\label{trans-codegen}
 \subsubsection{Trident API overview}
-Before discuss the technique for translating \emph{TQL} to Trident program, we first look at what does a typical Trident program look like. Example~\ref{trident-impl-exmp} shows a code snippet of the implementation of a word count application. The code is pretty self-explained if you familar with JAVA.
+Before discuss the technique for translating \emph{TQL} to Trident program, we first look at what does a typical Trident program look like. Example~\ref{trident-impl-exmp} shows a code snippet of the implementation of a word count application. The code is pretty self-explained if you familiar with JAVA.
 \begin{example}\label{trident-impl-exmp}
 \footnotesize\begin{verbatim}
 
@@ -708,7 +708,7 @@ The following APIs are also useful and therefore are listed.
 \end{itemize}
 
 \subsubsection{Translation of $\omega$ (window operator)}
-The window operator translation is implemented by three Trident APIs. As illustrated in Example~\ref{win-trans}, a \texttt{s1.win:time(1 min)} window could be expressed by a sequence of \texttt{partitionPersistent}, \texttt{newValuesStream} and \texttt{groupBy}. The idea is that each time the spout emit a tuple, it goes into the TimeWindow, which is a buffer ring internally. The buffer ring supports a policy-based eviction specified by the Window class. For row-based sliding window with size $n$, the eviction policy is all the tuples that are $n$ away of the current one should be eliminated. For time-based sliding window with duration $d$, the policy is all the tuples whose timestamps satisfies $|t_{old} - now| > d$ should be eliminated. The \texttt{SlidingWindowUpdater} will maintain the sliding window based on the eviction policy, and emit all the tuples in current window with a unique windowId each time when a new tuple enter the window. The output stream can be captured by the \texttt{newValueStream}, and \texttt{groupBy} makes all the tuples with same windowId go to the same partitions. 
+The window operator translation is implemented by three Trident APIs. As illustrated in Example~\ref{win-trans}, a \texttt{s1.win:time(1 min)} window could be expressed by a sequence of \texttt{partitionPersistent}, \texttt{newValuesStream} and \texttt{groupBy}. The idea is that each time the spout emit a tuple, it goes into the \texttt{TimeWindow}, which is a buffer ring internally. The buffer ring supports a policy-based eviction specified by the Window class. For row-based sliding window with size $n$, the eviction policy is all the tuples that are $n$ away of the current one should be eliminated. For time-based sliding window with duration $d$, the policy is all the tuples whose timestamps satisfies $|t_{old} - now| > d$ should be eliminated. The \texttt{SlidingWindowUpdater} will maintain the sliding window based on the eviction policy, and emit all the tuples in current window with a unique windowId each time when a new tuple enter the window. The output stream can be captured by the \texttt{newValueStream}, and \texttt{groupBy} makes all the tuples with same \texttt{windowId} go to the same partitions. 
 \begin{example}\label{win-trans}
 \begin{verbatim}
 
@@ -731,7 +731,7 @@ The translation of other operators such as $\sigma$ and $\pi$ are relatively sim
 \item Aggregation is translated through \texttt{aggregate} directly. For multiple aggregations, the translation should begin with a \texttt{chainAgg} and end with a \texttt{chainEnd}. For the implementation of \texttt{AVG}, we use two chained aggregator \texttt{COUNT} and \texttt{SUM}.
 \item Order by and limit is tranlsate to the \texttt{applyAssembly(fisrtN())}, where fisrtN is a merge-sort based stream assembler.
 \end{itemize}
-Table~\ref{api-mapping} summarized the requried APIs of each operator translation.
+Table~\ref{api-mapping} summarized the required APIs of each operator translation.
 \begin{table}[hbt]
 % increase table row spacing, adjust to taste
 %\renewcommand{\arraystretch}{1.3}
@@ -826,19 +826,19 @@ customized filter functions can be plugged in the WHERE clause, function for dat
 To achieve this goal, we need to defined the proper UDF interface, extend our parser to accept the Java syntax, and then perform the translation.
 
 \subsection{Performance benchmark on cluster}
-Due to the time and resource limit, only local tests have been done in this project for now. However, it is not sufficient for a distrubuted realtime system to have local test only.
-To fully evalutate the performance of our system, a series of benchmark performance experiments should be done in a cluster environment with large set of real data. In this way,
+Due to the time and resource limit, only local tests have been done in this project for now. However, it is not sufficient for a distributed real-time system to have local test only.
+To fully evaluate the performance of our system, a series of benchmark performance experiments should be done in a cluster environment with large set of real data. In this way,
 we could monitor the actual delay, the failure-tolerant behavior, the average latency and throughput and so on.
 
 
 \section{Related Work}\label{rel-work}
 \subsection{STREAM}
-STREAM, the Standford Data Stream Management System, is one of the pioneer project leaded by the Stanford InfoLab database group that proposed a general purpose data stream-management system.
+STREAM, the Stanford Data Stream Management System, is one of the pioneer project leaded by the Stanford InfoLab database group that proposed a general purpose data stream-management system.
 It defined a formal abstract semantics for the continuous queries and designed the \emph{CQL} language to implement these concepts. The \emph{CQL} extends the classic \emph{SQL} syntax to
 support sliding window and stream-relation conversion. There are three types of sliding window implemented in the STREAM system, row-based, time-based and partition-based. The system is run in
 memory. When the data rates exceeds its ability to provide accurate result, a \emph{load-shedding} algorithm was applied to provide approximate results.
 \subsection{Esper}
-Esper is a powerful Complex Event Processing (CEP) engine, which provides a large set of functionalities for CEP jobs. Esper offers a Domain Specific Language (DSL) for processing stream events.
+Esper is a powerful Complex Event Processing (CEP) engine, which provides a large set of functionality for CEP jobs. Esper offers a Domain Specific Language (DSL) for processing stream events.
 Also, Esper provides a declarative language, the Event Processing Language (EPL), for processing high frequency time-based event data. \emph{SQL} streaming analytic is another commonly used term for this
 technology. One disadvantage of the system is about scalability. The Esper system runs entirely in memory, so the only way to scale the system is to add more physical memories to it. In addition,
 the system suffers the single-point failure issue since the system is deployed on a single machine.
@@ -852,11 +852,13 @@ elegent, one major issue is that the all the computation is done in in-memory an
 \subsection{Pig-Latin}
 \emph{Pig Latin} is a novel data processing language developed by the Yahoo! Research. It combines the feature of high-level declarative querying in \emph{SQL} and the low-level procedural programming
 paradigm map reduce. The program written in Pig Latin can be compiled into a set of map-reduce job that executed on the Hadoop system to perform data analysis jobs. It has been widely adopted by
-many companies since its first release and become one of the necessary compontent during the deployment of a big data application. The idea and the design of the Triton project is also partially derived
+many companies since its first release and become one of the necessary component during the deployment of a big data application. The idea and the design of the Triton project is also partially derived
 from the Pig Latin. To some extent, we could claim that Triton is the \emph{Pig Latin} for Trident.
 
 \section{Conclusion}
-We present a stream query translation engine base on the Trient platform. We designed a query language called \emph{TQL} along with the Triton system.
+We presented a continuous query translation engine base on the Trident/Storm platform called Triton, and a query language called \emph{TQL} along with the Triton system. The goal of Triton is to provide a high-level abstraction on Trident to reduce the difficulty of building a distributed streaming processing application. The \emph{TQL} script will be compiled into native Trident program in JAVA programming language by Triton, and run directly on the Storm platform. Users no longer need to worry about too much low level details such as how to construct a Trident topology and how to scale the system.
+
+Currently Triton is still in its early stage, but we believe that when it becomes mature, it will play an important role in the area of real-time streaming processing, just as what \emph{Pig} has achieved.
 
 % conference papers do not normally have an appendix
 
